WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204900
IndexedDB: pass along error of IDBBackingStore::renameIndex
https://bugs.webkit.org/show_bug.cgi?id=204900
Summary
IndexedDB: pass along error of IDBBackingStore::renameIndex
Sihui Liu
Reported
2019-12-05 10:39:11 PST
...
Attachments
Patch
(4.55 KB, patch)
2019-12-05 11:10 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(7.34 KB, patch)
2019-12-05 12:13 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2019-12-05 11:10:19 PST
Created
attachment 384923
[details]
Patch
Sihui Liu
Comment 2
2019-12-05 12:13:07 PST
Created
attachment 384932
[details]
Patch
Brady Eidson
Comment 3
2019-12-05 14:17:18 PST
Comment on
attachment 384932
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=384932&action=review
> Source/WebCore/ChangeLog:13 > + Covered by existing test: storage/indexeddb//modern/index-rename-1-private.html
I don't see any changes to that test or its expectations, yet this is purportedly a behavior change. How is it covered by the test?
Sihui Liu
Comment 4
2019-12-05 14:34:05 PST
(In reply to Brady Eidson from
comment #3
)
> Comment on
attachment 384932
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=384932&action=review
> > > Source/WebCore/ChangeLog:13 > > + Covered by existing test: storage/indexeddb//modern/index-rename-1-private.html > > I don't see any changes to that test or its expectations, yet this is > purportedly a behavior change. > > How is it covered by the test?
The two bugs are covered by the test after we pass along the IDBBackingStore error.
WebKit Commit Bot
Comment 5
2019-12-06 15:56:42 PST
Comment on
attachment 384932
[details]
Patch Clearing flags on attachment: 384932 Committed
r253228
: <
https://trac.webkit.org/changeset/253228
>
WebKit Commit Bot
Comment 6
2019-12-06 15:56:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-12-06 15:57:22 PST
<
rdar://problem/57716666
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug