Source/WebCore/Modules/indexeddb/shared/IDBObjectStoreInfo.cpp
@@ -98,13 +98,10 @@ IDBObjectStoreInfo IDBObjectStoreInfo::isolatedCopy() const
 {
     IDBObjectStoreInfo result = { m_identifier, m_name.isolatedCopy(), WebCore::isolatedCopy(m_keyPath), m_autoIncrement };
 
-    for (auto& iterator : m_indexMap) {
+    for (auto& iterator : m_indexMap)
         result.m_indexMap.set(iterator.key, iterator.value.isolatedCopy());
-        if (iterator.key > result.m_maxIndexID)
-            result.m_maxIndexID = iterator.key;
-    }
 
-    ASSERT(result.m_maxIndexID == m_maxIndexID);
+    result.m_maxIndexID = m_maxIndexID;
 
     return result;
 }
